# inference-project

./: .gitignore  CMakeLists.txt  LICENSE
src/: allocator.c  allocator.h  helpers.h  main.c  main.cu  model.cuh  tokenizer.c  tokenizer.h
src/cuda/: cuda_helpers.cuh
src/cuda/api/: cuda_allocator.cu  cuda_allocator.cuh  cuda_mem_wrapper.cu  cuda_mem_wrapper.cuh
src/cuda/kernels/: input_embeddings.cu  input_embeddings.cuh
